# polynomial-solver

./: .gitmodules  Cargo.toml  FINDINGS.ipynb  FINDINGS.md  GB-based-SAT-algorithm.txt  README.md  benchmark.txt  rust-toolchain.toml
.github/workflows/: benchmark.yml
benches/: monitoring.rs
benchmarks/: run_benchmarks.py
benchmarks/inputs/: u8_different_from_zero.zok_bin
docs/SMT-2022-extended-abstract/: README.md
monitoring-cases/r1cs-determinism/: fb
monitoring-cases/zokrates-bin/: u8_different_from_zero.zok  u8_different_from_zero.zok_bin
src/: big_unsigned.rs  factorization.rs  fast_compare.rs  finite_field.rs  gcd.rs  grobner_basis.rs  kd_tree.rs  lib.rs  main.rs  ordered_ops.rs  ordered_sum.rs  polynomial.rs  prime_field_solvability.rs  solvability.rs  thread_prime_field.rs
src/field/: arbitrary_size.rs  fixed_size.rs  mod.rs
src/polynomial/: cocoa_print.rs  division.rs  divmask.rs  grobner_basis.rs  mod.rs  monomial_ordering.rs  signature_basis.rs  square_free.rs
src/polynomial/signature_basis/: basis_calculator.rs  mod.rs  ratio_monomial_index.rs  s_pairs.rs  signature_monomial_index.rs
src/polynomial/signature_basis/indices/: mod.rs  monomial_index.rs  ratio_monomial_index.rs
