[package]
name = "polynomial-solver"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
num = "0.4.0"
rand = "0.8.4"

[dependencies]
mimalloc = { version = "*", default-features = false }
num-traits = "0.2"
itertools = "0.10.1"
zokrates_core = { git = "https://github.com/Zokrates/ZoKrates.git" }
zokrates_field = { git = "https://github.com/Zokrates/ZoKrates.git" }

[dependencies.rug]
version = "1.13"
default-features = false
features = ["integer"]

[profile.release]
lto = "thin"
