[package]
name = "polynomial-solver"
version = "0.1.0"
edition = "2021"

[dev-dependencies]
num = "0.4.0"

[dependencies]
mimalloc = { version = "*", default-features = false }
num-traits = "0.2"
itertools = "0.10.1"
zokrates_core = { git = "https://github.com/Zokrates/ZoKrates.git", rev = "048221bafd2cf808cad0b4c380f"}
zokrates_field = { git = "https://github.com/Zokrates/ZoKrates.git", rev = "048221bafd2cf808cad0b4c380f" }
clap = { version = "4.0", features = ["derive"] }
pest = "2.0"
pest_derive = "2.0"
bitvec = "1"
rand = "0.8.4"

[dependencies.rug]
version = "1.13"
default-features = false
features = ["integer","float"]

[profile.release]
lto = "thin"
