[package]
name = "polynomial-solver"
version = "0.1.0"
edition = "2021"

[[bench]]
name = "monitoring"
harness = false

[dev-dependencies]
num-rational = "0.4.1"
libc = "0.2"
regex = "1"
lazy_static = "1.4"
csv = "1.1"
serde = "1.0"
walkdir = "2"

[dependencies]
mimalloc = { version = "*", default-features = false }
num-traits = "0.2"
itertools = "0.10.1"
zokrates_ast = { git = "https://github.com/lvella/ZoKrates.git", branch = "patch-1" }
zokrates_field = { git = "https://github.com/lvella/ZoKrates.git", branch = "patch-1" }
clap = { version = "4.0", features = ["derive"] }
pest = "2.3"
pest_derive = "2.3"
bitvec = "1"
rand = "0.8"
replace_with = "0.1"
r1cs-file = { git = "https://github.com/lvella/zeropool-utils.git" }
rug = {version = "1.13", default-features = false, features = ["integer"]}

[profile.release]
lto = "thin"

[profile.release-with-debug]
inherits = "release"
debug = true
